Document PPDG/src/objects/Secure_Message_Type__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Account maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report a problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Account_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Account Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>SubCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Secure Message Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>SubCategory__c</columns>
        <columns>Show_Account_Box__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Secure Message Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secure Message Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>